--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongodb": "^4.5.0",
     "next": "12.1.5",
     "next-mdx-remote": "^4.0.3",
+    "nextjs": "^0.0.3",
     "nprogress": "^0.2.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
