--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "google-auth-library": "^8.0.2",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.5.0",
+    "mongoose": "^8.1.1",
     "next": "12.1.5",
     "next-mdx-remote": "^4.0.3",
     "nextjs": "^0.0.3",
